[gd_scene load_steps=23 format=3 uid="uid://c1i1o75422ffs"]

[ext_resource type="Texture2D" uid="uid://cumo7lccgkh1u" path="res://Graphical Assets/spritesheets/enemy-deadth.png" id="1_iu8hn"]
[ext_resource type="Script" path="res://mob.gd" id="1_rlgj1"]
[ext_resource type="Texture2D" uid="uid://2iclfn4d5f7w" path="res://Graphical Assets/spritesheets/frog-idle.png" id="2_05wql"]
[ext_resource type="Texture2D" uid="uid://ce15ovolktpep" path="res://Graphical Assets/spritesheets/frog-jump.png" id="3_u1xnd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ryoda"]
radius = 9.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_46rgr"]
atlas = ExtResource("1_iu8hn")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_72pn4"]
atlas = ExtResource("1_iu8hn")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wurhk"]
atlas = ExtResource("1_iu8hn")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ny47"]
atlas = ExtResource("1_iu8hn")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hb5p"]
atlas = ExtResource("1_iu8hn")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_tutsx"]
atlas = ExtResource("1_iu8hn")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcxpx"]
atlas = ExtResource("2_05wql")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h27vf"]
atlas = ExtResource("2_05wql")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv2ga"]
atlas = ExtResource("2_05wql")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65fp8"]
atlas = ExtResource("2_05wql")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utlx6"]
atlas = ExtResource("3_u1xnd")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2qhn"]
atlas = ExtResource("3_u1xnd")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsges"]
atlas = ExtResource("3_u1xnd")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w42xx"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46rgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72pn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wurhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ny47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hb5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tutsx")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcxpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h27vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv2ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65fp8")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utlx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2qhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsges")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydg7n"]
radius = 390.001

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp8gw"]
size = Vector2(13.5, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0xgy"]
size = Vector2(24, 11)

[node name="mob" type="CharacterBody2D"]
script = ExtResource("1_rlgj1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_ryoda")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w42xx")
animation = &"idle"

[node name="PlayerDetects" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetects"]
shape = SubResource("CircleShape2D_ydg7n")

[node name="dead" type="Area2D" parent="."]

[node name="dead" type="CollisionShape2D" parent="dead"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_jp8gw")

[node name="players dead zone" type="Area2D" parent="."]

[node name="playersdead" type="CollisionShape2D" parent="players dead zone"]
position = Vector2(-1, 6.5)
shape = SubResource("RectangleShape2D_e0xgy")

[connection signal="body_entered" from="PlayerDetects" to="." method="_on_player_detects_body_entered"]
[connection signal="body_exited" from="PlayerDetects" to="." method="_on_player_detects_body_exited"]
[connection signal="body_entered" from="dead" to="." method="_on_dead_body_entered"]
[connection signal="body_entered" from="players dead zone" to="." method="_on_players_dead_zone_body_entered"]
